--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragments.HomeFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Home Fragment" />
+    tools:context=".activities.LocationActivity">
 
     <TextView
-        android:id="@+id/myLocationTv"
+        android:id="@+id/locationTv"
         android:gravity="center"
         android:layout_marginTop="50dp"
         android:layout_width="match_parent"
@@ -22,7 +16,7 @@
         android:text="Loading location1....."/>
 
     <TextView
-        android:id="@+id/myLocationTv2"
+        android:id="@+id/locationTv2"
         android:gravity="center"
         android:layout_marginTop="100dp"
         android:layout_width="match_parent"
